fixed other projects container as well as I had the wrong width for it

--- a/code/style.css
+++ b/code/style.css
@@ -230,9 +230,8 @@ body {
 
 .other-projects-container {
     display: flex;
-    padding-left: 20px;
     margin-bottom: 20px;
-    width: 34%;
+    width: 70%;
     margin: 20px auto;
     flex-direction: column;
     justify-content: center;
